style.css
@font-face {
    font-family: 'hells_riderregular';
    src: url('hellsrider-webfont.woff2') format('woff2'),
         url('hellsrider-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Big Shoulders Display';
    src: url('BigShouldersDisplay-Regular.woff2') format('woff2'),
        url('BigShouldersDisplay-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

* {
	margin: 0px;
	padding: 0px;
}

::selection {
	background-color: #0A0B0C;
	color: #F1F2F2;
}

body {
	background-color: #D7A07F;
	overflow-x: hidden;
}

.navbar {
	z-index: +1;
	height: 96px;
	position: absolute;
	top: 0px;
	transition: 0.3s;
	margin: auto;
	width: 100vw;
	z-index: 2;
}

.navbar:hover {
	background-color: #0A0B0C;
}

.home-button {
	height: 72px;
	width: 72px;
	background-image: url('images/home-button.png');
	background-size: contain;
	background-repeat: no-repeat;
	transition: 0.3s;
}

.menu {
	margin: 20px;
	font-size: 36px;
	color: white;
	position: absolute;
	left: 10px;
	top: 10px;
	visibility: hidden;
	transition: 0.3s;
}

.menu:hover {
	color: #D7A07F;
}

.navbar:hover .home-button {
	background-image: url('images/home-button-hover.png')
}

a {
	text-decoration: none;
}

h1 {
	font-family: 'hells_riderregular';
	font-size: 72px;
	color: #F1F2F2;
	margin-top: 80px;
	margin-bottom: 40px;
	letter-spacing: 5px;
}

h2 {
	font-family: 'Big Shoulders Display';
	font-size: 48px;
	text-transform: uppercase;
	color: #0A0B0C;
	margin-bottom: 40px;
}

h3 {
	font-family: 'Big Shoulders Display';
	font-size: 36px;
	color: #0A0B0C;
	margin-bottom: 40px;
}

.navbar ul {
	height: 96px;
	max-width: 710px;
	overflow: hidden;
	margin: auto;
	list-style: none;
	display: flex;
	align-items: center;
	-webkit-flex-direction: row;
	-webkit-justify-content: space-between;
}

.navbar ul li {
	float: left;
	width: 72px;
	margin: auto;
}

li a {
	font-family: 'hells_riderregular';
	font-size: 18px;
	color: #F1F2F2;

}

li a:hover {
	color: #D7A07F;
}

p {
	letter-spacing: 3px;
}



.button-light {
	display: flex;
	align-items: center;
	-webkit-justify-content: center;
	border-style: solid;
	border-width: 2px;
	border-color: #F1F2F2;
	height: 64px;
	width: 200px;
	font-family: 'Big Shoulders Display';
	font-size: 24px;
	text-align: center;
	color: #F1F2F2;
	margin: auto;
	transition: 0.3s;
}

.button-light:hover {
	color: #0A0B0C;
	background-color: #F1F2F2;
}

.button-dark {
	display: flex;
	align-items: center;
	-webkit-justify-content: center;
	border-style: solid;
	border-width: 2px;
	border-color: #0A0B0C;
	height: 64px;
	width: auto;
	font-family: 'Big Shoulders Display';
	font-size: 24px;
	text-align: center;
	color: #0A0B0C;
	margin: auto;
	margin-top: 20px;
	transition: 0.3s;
}

.button-dark:hover {
	color: #D7A07F;
	background-color: #0A0B0C;
}

.full-banner {
	max-width: 768px;
	font-family: 'Big Shoulders Display';
	font-size: 24px;
	text-align: center;
	color: #0A0B0C;
	padding: 80px;
	padding-top: 0px;
	margin: auto;
}

.info-banner {
	display: flex;
	-webkit-flex-direction: row;
	-webkit-justify-content: space-between;
	flex-wrap: wrap;
	font-family: 'Big Shoulders Display';
	font-size: 24px;
	text-align: center;
	color: #0A0B0C;
	padding: 80px;
}

.info-block {
	min-width: 320px;
	max-width: 320px;
	height: 480px;
	margin: auto;
}

.info-block img {
	height: 100px;
	padding: 20px;
}

.info-block ul {
	list-style-position: outside;
	text-align:right;
	padding-left: 20px;
	padding-right: 20px;
	margin: auto;
}

.info-block ul li {
	letter-spacing: 3px;
}

video {
	position: absolute;
	height: 100vh;
	width: 100vw;
	object-fit: cover;
}

.hero {
	display: flex;
	align-items: center;
	-webkit-justify-content: center;
	-webkit-flex-direction: column;
	height: 100vh;
	width: 100vw;
	margin-bottom: 80px;
	background-color: black;
	overflow: hidden;
	flex-wrap: wrap;
}

.footer {
	height: 200px;
	width: 100vw;
	background-image: url("images/footer.png");
	background-size: 750px 200px;
	background-position: bottom;
	background-repeat: repeat-x;
	background-color: #0A0B0C;
}

.border {
	height: 60px;
	width: 100vw;
	background-image: url("images/footer-border.png");
	background-size: 104px 60px;
	background-position: center;
	background-repeat: repeat-x;
}

.media-link {
	display: flex;
	-webkit-align-items: center;
	-webkit-justify-content: center;
	font-size: 18px;
	text-align: center;
	border-style: solid;
	border-width: 2px;
	border-color: #D7A07F;
	border-radius: 50%;
	fill: #D7A07F;
	height: 38px;
	width: 38px;
	margin: 20px;
	transition: 0.3s;
	padding: 10px;
}

.media-link:hover {
	fill: #0A0B0C;
	background-color: #D7A07F;
}

.media-link-banner {
	display: flex;
	flex-direction: row;
	-webkit-justify-content: center;
	height: 96px;
	background-color: #0A0B0C;
	width: 100vw;
}

.bar {
	width: 100%;
	height: 2px;
	margin: auto;
	position: relative;
	background-color: white;
	margin-top: 2px;
	margin-bottom: 2px;
}

.footer h3 {
	position: relative;
	color: #D7A07F;
	bottom: 70px;
	left: 40px;
	width: 100px;
}

.mobile-nav {
	display: flex;
	flex-direction: column;
	background-color: #0A0B0C;
	height: 0;
	margin: auto;
	width: 100vw;
	position: absolute;
	top:0;
	left:0;
	transition: 0.3s;
	overflow:hidden;
	visibility: hidden;
	z-index: 2;
}

.mobile-nav li {
	font-size: 18px;
	text-align: center;
	width: auto;
	margin-right: 20px;
	line-height: 48px;
}

.hamburger {
	visibility: hidden;
	transition: 0.3s;
}


.arrow {
    height: 48px;
    width: 48px;
    stroke:white;
    animation: point 2s infinite;
}

@keyframes point {
    from {
        margin-top: 0;
        opacity:1;
    }
    to {
        margin-top: 64px;
        opacity: 0;
    }
}

/* mobile view work in progress */

@media (max-width: 640px), (pointer: coarse) {
	.hamburger {
		visibility: visible;
	}

	.mobile-nav {
		visibility: visible;
	}

	.navbar ul li {
		visibility: hidden;
	}

	.navbar ul li .home-button {
		visibility: visible;
	}

	.footer {
		height: 296px;
	}

	.footer h3 {
		position: relative;
		top: 0px;
		left: 0px;
		margin: auto;
		width: auto;
		padding-top: 20px;
		text-align: center;
	}

	.menu {
		visibility: visible;
	}

	h1 {
		font-size: 36px;
	}
	
}

@media (pointer:coarse) {
	.button-light {
		zoom: 2;
	}

	h1 {
		zoom: 2;
	}

	.banner {
		zoom: 2;
	}

	.navbar ul li {
		margin-left: 22px;
	}

	.mobile-nav li {
		zoom: 2;
		margin:0;
	}
	.navbar {
		zoom: 2;
		width: 100%;
	}
}

